--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">Finance_Tracker</string>
+    <string name="app_name">Finance Tracker</string>
+    <string name="full_name_Err">Enter Full Name!</string>
+    <string name="email_Err">Enter Email Address!</string>
+    <string name="password_Err">Enter Password! It must contain a lowercase, an uppercase, a number, and special</string>
+    <string name="cpassword_Err">Enter Confirm Password!</string>
 </resources>
