--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="email_Err">Enter Email Address!</string>
     <string name="password_Err">Enter Password! It must contain a lowercase, an uppercase, a number, and special</string>
     <string name="cpassword_Err">Enter Confirm Password!</string>
-    <string name="add_bill">Add/Edit</string>
-    <string name="bills">Bills</string>
+    <string name="address_Err">Enter Field!</string>
+    <string name="add_bill">Add</string>
     <string name="title_activity_bill_reminder">BillReminderActivity</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
